force-app/main/default/objects/tdc_tsw__Survey_Answers__c/fields/tdc_tsw__Default__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>