force-app/main/default/objects/tdc_tsw__Survey_Answers__c/fields/tdc_tsw__Next_Question__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Next_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Question</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>tdc_tsw__Message_Template__c.tdc_tsw__SMS_Survey__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>tdc_tsw__Message_Template__c</referenceTo>
    <relationshipLabel>Survey Answers</relationshipLabel>
    <relationshipName>Survey_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>