force-app/main/default/objects/tdc_tsw__Survey_Answers__c/fields/tdc_tsw__Possible_Answers__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Possible_Answers__c</fullName>
    <label>Possible Answers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>