force-app/main/default/objects/tdc_tsw__Survey_Answers__c/fields/tdc_tsw__SMS_Template__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__SMS_Template__c</fullName>
    <label>SMS Template</label>
    <referenceTo>tdc_tsw__Message_Template__c</referenceTo>
    <relationshipLabel>Survey Answers (SMS Template)</relationshipLabel>
    <relationshipName>Survey_Answers1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>